@@ -257,14 +257,14 @@ public class EntityTeleportationBackend {
             int xzDiff = Math.abs(mutableTemp1.getX() - mutableTemp2.getX()) + Math.abs(mutableTemp1.getZ() - mutableTemp2.getZ());
 
             // Reverse direction if checking upward
-            if(checkingUpward) {
+            if (checkingUpward) {
                 heightDiff *= -1;
                 xzDiff *= -1;
             }
 
             // Creates a cone of block entities to check where we start from the tip and work our way to the base of the cone.
             return heightDiff - xzDiff;
-        }).collect(Collectors.toList());
+        }).toList();
 
         for(BlockEntity blockEntity : sortedBlockEntities) {
             //try to find a valid spot next to it
